--- a/index.html
+++ b/index.html
@@ -15,9 +15,32 @@
         <div class="container">
             <h1>Let's Help Those Who Are</h1>
             <h1><span>More In Need</span></h1>
-                <p>We are by the side of hungry people!
-                    In the first phase, we delivered food to 200 families (about 600 people) for 10 to 12 days and we will continue this activity as long as you are by our side.</p>
-                    <a class="link" href="">Donet Now</a>
+            <p>We are by the side of hungry people!
+            In the first phase, we delivered food to 200 families (about 600 people) for 10 to 12 days and we will continue this activity as long as you are by our side.</p>
+            <a class="link" href="">Donet Now</a>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div>
+                <h1>Donet Today</h1>
+                <p>COMMUNITIES ENDANGERED IN SUDDEN FLOOD IN SYLHET AND RANGPUR DIVISIONS</p>
+            </div>
+            <div class="box">
+                <h2>100tk</h2>
+            </div>
+            <div class="box">
+                <h2>200tk</h2>
+            </div>
+            <div class="box">
+                <h2>500tk</h2>
+            </div>
+            <div class="box title">
+                <h2>1000tk</h2>
+            </div>
+            <div class="box">
+                <h2>5000tk</h2>
+            </div>
         </div>
     </section>
 </body>
