--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div>
                 <h1>Donet Today</h1>
-                <p>COMMUNITIES ENDANGERED IN SUDDEN FLOOD IN SYLHET AND RANGPUR DIVISIONS</p>
+                <p><span>COMMUNITIES ENDANGERED IN SUDDEN FLOOD IN SYLHET AND RANGPUR DIVISIONS</span></p>
             </div>
             <div class="box">
                 <h2>100tk</h2>
@@ -42,6 +42,35 @@
                 <h2>5000tk</h2>
             </div>
         </div>
+    </section>
+    <section>
+        <div class="container text-color">
+            <p>Other Amount (taka)</p><hr>
+            <a class="link" href="">Donet Now</a>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h1>Our Donet Plan</h1>
+            <p><span>Field office staff have reported that the Friendship district office building is waterlogged. There is also now a scarcity of food,<br> low-pressure gas for cooking and shortage of other essentials.</span></p>
+        </div>
+            <div class="education">
+                <div class="shadow1">
+                    <img src="icon/food.png" alt="">
+                    <h1>Food for a family </h1>
+                    <p><span>Food is a basic necessity for survival and also the key to a healthy life. Without regular healthy meals children struggle to go to school, carers struggle to work and communities are left battling to survive.</span></p>
+                </div>
+                <div class="shadow2">
+                    <img src="icon/shelter.png" alt="">
+                    <h1>Shelter for a family</h1>
+                    <p><span>The Humanitarian General Purpose Tent System (HGPTS) is crafted to be put together quickly and easily to aid in response to natural disasters and emergencies. These shelters are equipped with roofs, </span></p>
+                </div>
+                <div class="shadow3">
+                    <img src="icon/Frame-1.png" alt="">
+                    <h1>Education for a child</h1>
+                    <p><span>Backed by over 20 years of research in Education, Psychology, Neuroscience and Theatre. Fun Play-Based Activities. 6 Engaging Learning Zones. Holistic Curriculum. Passionate Educators.</span></p>
+                </div>
+            </div>
     </section>
 </body>
 </html>
