--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="lets-help">
         <div class="container">
             <h1>Let's Help Those Who Are</h1>
-            <h1><span>More In Need</span></h1>
+            <h1>More In Need</h1>
             <p>We are by the side of hungry people!
             In the first phase, we delivered food to 200 families (about 600 people) for 10 to 12 days and we will continue this activity as long as you are by our side.</p>
             <a class="link" href="">Donet Now</a>
@@ -71,6 +71,16 @@
                     <p><span>Backed by over 20 years of research in Education, Psychology, Neuroscience and Theatre. Fun Play-Based Activities. 6 Engaging Learning Zones. Holistic Curriculum. Passionate Educators.</span></p>
                 </div>
             </div>
+    </section>
+    <section class="education">
+        <div class="lives">
+            <h1>Their lives depend on your donation</h1>
+            <p>The ongoing flood situation in different districts of the country including Sylhet, Sunamganj and Kurigram has become more dire. Millions of people are spending half a day starving due to waterlogging.</p><p> Women, children and the elderly are in the most vulnerable situation. Several non-governmental voluntary organizations of the country have come forward to help the flood victims. Through these organizations, you too can stand by the people suffering from caste discrimination.</p>
+            <a class="link" href="">How to Contribute?</a>
+        </div>
+        <div id="flood">
+            <img src="image/donation11.jpg" alt="">
+        </div>
     </section>
 </body>
 </html>
