--- a/index.html
+++ b/index.html
@@ -82,5 +82,23 @@
             <img src="image/donation11.jpg" alt="">
         </div>
     </section>
+    <section>
+        <div id="update">
+            <div>
+                <h1>Get My Updates</h1>
+                <p>Theis my Email!</p>
+            </div>
+            <p id="email">
+                <input type="text" placeholder="Email address" name="mail" required>
+                <a id="subscribe" href="">Subscribe</a>
+            </div>
+        </div>
+    </section>
 </body>
+   <footer>
+    <div id="footer">
+        <h2 id="Humble">Be Humble</h2>
+        <p>i'am gonna do it.</p>
+    </div>
+   </footer>
 </html>
